# dir2txt

./: CMakeLists.txt  LICENSE  README.md
include/: CommentStripper.h  Config.h  DirectoryWalker.h  FileFilter.h  FileWriterJson.h  FileWriterText.h  IDirectoryWalker.h  IFileFilter.h  IWriter.h  UniversalIgnoreParser.h  Utils.h
src/: CommentStripper.cpp  Config.cpp  DirectoryWalker.cpp  FileFilter.cpp  FileWriterJson.cpp  FileWriterText.cpp  UniversalIgnoreParser.cpp  Utils.cpp  main.cpp
